project details done

--- a/src/components/Blogs/ProjectInfo.css
+++ b/src/components/Blogs/ProjectInfo.css
@@ -3,3 +3,10 @@
     text-decoration: underline;
     font-weight: 700;
 }
+.bg{
+    background-color: #f4f7fc;
+}
+.image {
+    height: 600px;
+    width: 600px;
+}
