--- a/src/components/Articles/Articles.css
+++ b/src/components/Articles/Articles.css
@@ -1,3 +1,6 @@
 /* .card-bg{
     background-color: #f4f7fc;
 } */
+.card-design{
+    font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
+}
