--- a/src/components/Home/Projects/Projects.css
+++ b/src/components/Home/Projects/Projects.css
@@ -4,9 +4,9 @@
     font-weight: 700;
 }
 
-/* .card-sizing{
-    height: 500px;
-} */
+.card-sizing{
+    height: 300px;
+}
 
 .project-bg{
     /* background-color: rgb(33, 128, 128); */
