--- a/src/components/Articles/ArticlesInfo/ArticlesInfo.css
+++ b/src/components/Articles/ArticlesInfo/ArticlesInfo.css
@@ -7,9 +7,11 @@
     font-weight: 800;
 }
 div.para{
-    line-height: 30px;
-    background-color: lightseagreen ;
-    border-radius: 10px;
+    line-height: 40px;
+    font-size: large;
+    font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
+    /* background-color: lightseagreen ;
+    border-radius: 10px; */
 }
 .img-fluid{
     width: 350px;
