--- a/src/components/Blogs/ProjectInfo.css
+++ b/src/components/Blogs/ProjectInfo.css
@@ -3,10 +3,59 @@
     text-decoration: underline;
     font-weight: 700;
 }
+body {
+    height: 100vh;
+    margin: 0;
+    display: grid;
+    place-items: center;
+    background: #222;
+  }
+  
+  .module-border-wrap {
+    /* max-width: 250px; */
+    padding: 1rem;
+    position: relative;
+    /* background: linear-gradient(to right, red, purple); */
+    padding: 3px;
+  }
+  
+  .module {
+    max-width: 250px;
+    padding: 1rem;
+    /* color: white; */
+    border-width: 3px;
+    border-style: solid;
+    border-image: 
+      linear-gradient(
+        to bottom, 
+        red, 
+        rgba(0, 0, 0, 0)
+      ) 1 100%;
+  }
+.features{
+    border: 2px solid lightgray;
+    box-shadow: #0d2d63;
+    box-shadow: red ;
+    /* background-color: white !important; */
+    border-radius: 15px;
+    padding: 10px;
+}
+.title{
+    color: #218080;
+}
 .bg{
     background-color: #f4f7fc;
+    font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
+    font-size: large;
+    line-height: 35px;
 }
 .image {
     height: 600px;
     width: 600px;
+}
+.img-size{
+    height: 400px;
+}
+.text-color{
+    color: #0000ff;
 }
