--- a/src/components/Blogs/ProjectInfo.css
+++ b/src/components/Blogs/ProjectInfo.css
@@ -3,26 +3,25 @@
     text-decoration: underline;
     font-weight: 700;
 }
-body {
+/* body {
     height: 100vh;
     margin: 0;
     display: grid;
     place-items: center;
     background: #222;
-  }
+  } */
   
   .module-border-wrap {
-    /* max-width: 250px; */
+   
     padding: 1rem;
     position: relative;
-    /* background: linear-gradient(to right, red, purple); */
     padding: 3px;
   }
   
   .module {
     max-width: 250px;
     padding: 1rem;
-    /* color: white; */
+    
     border-width: 3px;
     border-style: solid;
     border-image: 
@@ -36,7 +35,6 @@ body {
     border: 2px solid lightgray;
     box-shadow: #0d2d63;
     box-shadow: red ;
-    /* background-color: white !important; */
     border-radius: 15px;
     padding: 10px;
 }
