--- a/src/components/Home/Header/Banner/Banner.css
+++ b/src/components/Home/Header/Banner/Banner.css
@@ -5,8 +5,8 @@
     display: inline-block;
     margin: 0 0.5rem;
   
-    animation: bounce; /* referring directly to the animation's @keyframe declaration */
-    animation-duration: 2s; /* don't forget to set a duration! */
+    animation: bounce; 
+    animation-duration: 2s; 
   }
 .banner{
     height: 450px;
